# src/SWP/Bundle/CoreBundle/Form/Type/FacebookInstantArticlesFeedType.php
@@ -1,66 +1,0 @@
-<?php
-
-declare(strict_types=1);
-
-/*
- * This file is part of the Superdesk Web Publisher Content List Bundle.
- *
- * Copyright 2016 Sourcefabric z.ú. and contributors.
- *
- * For the full copyright and license information, please see the
- * AUTHORS and LICENSE files distributed with this source code.
- *
- * @copyright 2016 Sourcefabric z.ú
- * @license http://www.superdesk.org/license
- */
-
-namespace SWP\Bundle\CoreBundle\Form\Type;
-
-use Symfony\Bridge\Doctrine\Form\Type\EntityType;
-use Symfony\Component\Form\AbstractType;
-use Symfony\Component\Form\Extension\Core\Type\IntegerType;
-use Symfony\Component\Form\FormBuilderInterface;
-use Symfony\Component\OptionsResolver\OptionsResolver;
-use SWP\Bundle\CoreBundle\Model\ContentList;
-use SWP\Bundle\CoreBundle\Model\FacebookPage;
-
-class FacebookInstantArticlesFeedType extends AbstractType
-{
-    /**
-     * {@inheritdoc}
-     */
-    public function buildForm(FormBuilderInterface $builder, array $options)
-    {
-        $builder
-            ->add('contentBucket', EntityType::class, [
-                'class' => ContentList::class,
-                'help' => 'Content List Id',
-            ])
-            ->add('facebookPage', EntityType::class, [
-                'class' => FacebookPage::class,
-                'help' => 'Facebook Page Id (from Publisher)',
-            ])
-            ->add('mode', IntegerType::class, [
-                'help' => 'Feed Mode (0 for development, 1 for production)',
-            ])
-        ;
-    }
-
-    /**
-     * {@inheritdoc}
-     */
-    public function configureOptions(OptionsResolver $resolver)
-    {
-        $resolver->setDefaults([
-            'csrf_protection' => false,
-        ]);
-    }
-
-    /**
-     * {@inheritdoc}
-     */
-    public function getBlockPrefix()
-    {
-        return '';
-    }
-}
